Fix issue on chrome where images would have a 4px gap for some reason

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 a > img, video, a {
     height: 100%;
+    display: flex;
     width: 100%;
     margin: 0;
     padding: 0;
